package S191220124.task2.src;

public interface Sorter {

    public void load(int[] elements);
    public void sort();
    public String getPlan();
}